--- a/index.html
+++ b/index.html
@@ -36,15 +36,11 @@
             <button id="addAlarm">+</button>
         </div>
         <div id="newAlarm" style="display: none;">
-            <div id="newAlarmButtons">
-                <button id="newAlarmCancel">Cancel</button>
-                <button id="newAlarmSave">Save</button>
-            </div>
             <div id="alarmDate">
-                <input type="date" name="" id="inputAlarmDate">
+                <input type="date" id="inputAlarmDate">
             </div>
             <div id="alarmTime">
-                <input type="time" name="" id="inputAlarmTime">
+                <input type="time" id="inputAlarmTime">
             </div>
             <div id="alarmRepeat">
                 <button class="alarmRepeatButton">M</button>
@@ -55,6 +51,10 @@
                 <button class="alarmRepeatButton">S</button>
                 <button class="alarmRepeatButton">S</button>
                 MOZDA SNUZ I ALARM NAME;
+                <div id="newAlarmButtons" class="footer">
+                    <button id="newAlarmCancel">Cancel</button>
+                    <button id="newAlarmSave">Save</button>
+                </div>
             </div>
         </div>
     </div>
